<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <EditText
        android:id="@+id/activity_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/activity_login_user_name" />

    <EditText
        android:id="@+id/activity_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/activity_login_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/activity_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_log_in" />

    <ProgressBar
        android:id="@+id/activity_login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

</LinearLayout>
