<resources>
    <string name="app_name">Dagger2 Espresso</string>

    <string name="action_settings">Settings</string>
    <string name="activity_login_user_name">username</string>
    <string name="activity_login_password">password</string>
    <string name="activity_login_log_in">Log in</string>
    <string name="activity_login_username_error">Username cannot be empty</string>
    <string name="activity_login_password_error">Password cannot be empty</string>
    <string name="server_error">Server error</string>
    <string name="activity_main_link">TheDeveloperWorldIsYours.com</string>
    <string name="activity_main_image">Show image</string>
</resources>
